[FEATURES] able to get list histories transactions
